Update some SEO performance meta tags

--- a/AK-Site/index.html
+++ b/AK-Site/index.html
@@ -4,6 +4,20 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- Essential SEO meta tags -->
+  <meta name="description"
+    content="Professional mortgage and insurance advice from regulated experts. Free consultation, access to 90+ lenders. Get your mortgage approved faster with expert guidance.">
+  <meta name="keywords"
+    content="mortgage advisor, mortgage broker, home loans, remortgage, first time buyer, insurance">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Professional Mortgage Advisory Services">
+  <!-- Open Graph for social sharing -->
+  <meta property="og:title" content="Professional Mortgage & Insurance Advisory Services">
+  <meta property="og:description"
+    content="Expert mortgage advice from regulated professionals. Access to 90+ lenders, free consultation available.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://mortgageuk.netlify.app">
+  <meta property="og:image" content="/images/og-image.jpg">
   <!-- Preconnect to external domains -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
